Change password popup

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8730,205 +8730,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #ddc345; }
+  background: #ac04d9; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #9fe2ed; }
+  background: #f1efd9; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #994781; }
+  background: #ab386d; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #5c1608; }
+  background: #5cf1d9; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #36db6e; }
+  background: #2e598b; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #ad5daf; }
+  background: #59a9af; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #1e3b0f; }
+  background: #6aa153; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #f0021e; }
+  background: #8b6d66; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #58568e; }
+  background: #74b60c; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #39ee8b; }
+  background: #d13399; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #8d9c6f; }
+  background: #8c34fd; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #c25301; }
+  background: #97c126; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #451983; }
+  background: #5c1b6f; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #ea2b51; }
+  background: #690762; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #8d7291; }
+  background: #1432ae; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #e92220; }
+  background: #64959a; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #1b3755; }
+  background: #99c55d; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #6da37e; }
+  background: #fe6fb4; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #5da78a; }
+  background: #6db845; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #c99752; }
+  background: #ddbc92; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #3fd0ae; }
+  background: #a8fd70; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #1a835d; }
+  background: #856249; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #52a06c; }
+  background: #2e8448; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #65f458; }
+  background: #9919c7; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #798602; }
+  background: #2995aa; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #1376f3; }
+  background: #aa5512; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #797c3a; }
+  background: #1d626a; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #9f3447; }
+  background: #8ed295; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #6ed473; }
+  background: #74ed29; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #beb6a7; }
+  background: #0bb1b9; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #1a50e5; }
+  background: #89322f; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #27f68e; }
+  background: #892dfe; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #973257; }
+  background: #ae6360; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #d8e5b2; }
+  background: #4b01ca; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #210c97; }
+  background: #d257a6; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #e1a71a; }
+  background: #b60274; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #edf8a0; }
+  background: #17ddd5; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #af7ec5; }
+  background: #bb7db5; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #6d6229; }
+  background: #6d0616; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #26a5f7; }
+  background: #b1642f; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #359c9c; }
+  background: #0aba88; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #76d7f1; }
+  background: #3c579e; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #07b127; }
+  background: #0c6d0f; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #b275b2; }
+  background: #7f0174; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #b68879; }
+  background: #49b912; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #3da1da; }
+  background: #f86dd0; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #f4aca7; }
+  background: #03c908; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #56f544; }
+  background: #3edb70; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #641409; }
+  background: #9781b0; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #a05474; }
+  background: #463e75; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #7122ff; }
+  background: #c1f0e9; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #d017b6; }
+  background: #561072; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #6982f9; }
+  background: #64f15c; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #6c9a91; }
+  background: #5c65c2; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #4b4f9a; }
+  background: #02340a; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #a4ba55; }
+  background: #eb7896; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #2b4cc3; }
+  background: #4fddd2; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #f1409e; }
+  background: #74dea4; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #e3fd80; }
+  background: #8ff56f; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #40d874; }
+  background: #0a2c32; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #e0ba01; }
+  background: #13718b; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #6bf087; }
+  background: #08142f; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #eb520d; }
+  background: #b4f3bf; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #14c60a; }
+  background: #c63886; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #491c40; }
+  background: #b0701a; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #0cf9f9; }
+  background: #c6b55d; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #6ccdc6; }
+  background: #45b2b8; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #4afb3d; }
+  background: #08c596; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #99c310; }
+  background: #ae940c; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #22cb31; }
+  background: #d34301; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #ee6aa6; }
+  background: #f611bf; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #19d6d1; }
+  background: #4136d1; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #700eff; }
+  background: #a42b67; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #463e97; }
+  background: #772f56; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #eb859b; }
+  background: #8d7b07; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #50777d; }
+  background: #8e104d; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #1dcd2b; }
+  background: #7f71ee; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #20f36e; }
+  background: #60fddf; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #0da9cc; }
+  background: #7094f1; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #831fcb; }
+  background: #0fae6b; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #88cd79; }
+  background: #a8faaf; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #593c8a; }
+  background: #3fbf66; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #29822a; }
+  background: #493de4; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #fd3da6; }
+  background: #46bb97; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #42c2e6; }
+  background: #ff1741; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #f09c88; }
+  background: #485430; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #fecaf5; }
+  background: #139bb5; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #402d46; }
+  background: #7a8630; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #d831ef; }
+  background: #96d18d; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #35e445; }
+  background: #0c0ebf; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #66d766; }
+  background: #11df73; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #55625c; }
+  background: #822cd1; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #20edc5; }
+  background: #17d3d0; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #c06f57; }
+  background: #bc9f52; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #ea0cfc; }
+  background: #a2013e; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #95fe0d; }
+  background: #ef6387; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #513aa5; }
+  background: #c99ea0; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #ca948c; }
+  background: #611328; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #9a262e; }
+  background: #23c054; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #3ca237; }
+  background: #b79f6a; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -11584,7 +11584,7 @@ input:checked + .sliders:before {
 
 .modal-add-connections-wrapper .adding-adapter-modal-header {
   border-bottom: 1px solid #dcdde1;
-  padding: 12px 20px; }
+  padding: 12px 25px; }
 
 .modal-add-connections-wrapper .modal-close-btn {
   position: inherit;
