width issue fixed popup modal

--- a/scss/_fahad.scss
+++ b/scss/_fahad.scss
@@ -2559,3 +2559,7 @@ table .parent-row,
 .col-icons div {
   padding: 0px 4px !important;
 }
+
+.max-small-width-modal {
+  max-width: 452px !important;
+}
