--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8730,205 +8730,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #ac04d9; }
+  background: #108215; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #f1efd9; }
+  background: #fa5f6c; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #ab386d; }
+  background: #283eeb; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #5cf1d9; }
+  background: #a14295; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #2e598b; }
+  background: #2cbeb9; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #59a9af; }
+  background: #be4e76; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #6aa153; }
+  background: #bfbfb4; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #8b6d66; }
+  background: #d3f212; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #74b60c; }
+  background: #2036a9; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #d13399; }
+  background: #9e04ca; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #8c34fd; }
+  background: #5be33d; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #97c126; }
+  background: #8cf239; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #5c1b6f; }
+  background: #a6042a; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #690762; }
+  background: #acaef5; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #1432ae; }
+  background: #3c210f; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #64959a; }
+  background: #5daea0; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #99c55d; }
+  background: #6e6867; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #fe6fb4; }
+  background: #4ae7f7; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #6db845; }
+  background: #48bccd; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #ddbc92; }
+  background: #411aa5; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #a8fd70; }
+  background: #d95673; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #856249; }
+  background: #bf29ae; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #2e8448; }
+  background: #68f2f1; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #9919c7; }
+  background: #54011c; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #2995aa; }
+  background: #787229; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #aa5512; }
+  background: #435b99; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #1d626a; }
+  background: #a2a855; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #8ed295; }
+  background: #a494c5; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #74ed29; }
+  background: #6ae754; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #0bb1b9; }
+  background: #aba9a5; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #89322f; }
+  background: #510d02; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #892dfe; }
+  background: #778824; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #ae6360; }
+  background: #e73253; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #4b01ca; }
+  background: #5801be; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #d257a6; }
+  background: #739816; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #b60274; }
+  background: #4d418c; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #17ddd5; }
+  background: #2336cf; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #bb7db5; }
+  background: #9efdef; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #6d0616; }
+  background: #6e3d4a; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #b1642f; }
+  background: #7f4fae; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #0aba88; }
+  background: #d0c4a6; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #3c579e; }
+  background: #34bb6a; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #0c6d0f; }
+  background: #2671ea; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #7f0174; }
+  background: #afd66f; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #49b912; }
+  background: #c0a905; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #f86dd0; }
+  background: #eabe77; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #03c908; }
+  background: #7c01b0; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #3edb70; }
+  background: #6e8202; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #9781b0; }
+  background: #a2d16c; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #463e75; }
+  background: #a18df8; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #c1f0e9; }
+  background: #534656; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #561072; }
+  background: #7a3a9e; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #64f15c; }
+  background: #cbc20b; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #5c65c2; }
+  background: #20a531; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #02340a; }
+  background: #8b6ffc; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #eb7896; }
+  background: #cf764b; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #4fddd2; }
+  background: #3b37a4; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #74dea4; }
+  background: #6ae3f8; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #8ff56f; }
+  background: #03c4db; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #0a2c32; }
+  background: #47870d; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #13718b; }
+  background: #7c1bd6; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #08142f; }
+  background: #b605f3; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #b4f3bf; }
+  background: #dded52; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #c63886; }
+  background: #9cf85f; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #b0701a; }
+  background: #c0f30b; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #c6b55d; }
+  background: #f13a08; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #45b2b8; }
+  background: #bbd8e7; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #08c596; }
+  background: #ada831; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #ae940c; }
+  background: #69bb91; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #d34301; }
+  background: #932185; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #f611bf; }
+  background: #d969ab; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #4136d1; }
+  background: #1c2916; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #a42b67; }
+  background: #6ceb9a; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #772f56; }
+  background: #9bf4d3; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #8d7b07; }
+  background: #67b069; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #8e104d; }
+  background: #030495; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #7f71ee; }
+  background: #90fa3f; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #60fddf; }
+  background: #4bfa58; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #7094f1; }
+  background: #bc78db; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #0fae6b; }
+  background: #f7e609; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #a8faaf; }
+  background: #87b257; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #3fbf66; }
+  background: #0fa931; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #493de4; }
+  background: #23cf4a; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #46bb97; }
+  background: #cdf23d; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #ff1741; }
+  background: #77b750; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #485430; }
+  background: #163bf2; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #139bb5; }
+  background: #509409; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #7a8630; }
+  background: #939bcd; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #96d18d; }
+  background: #2c02c4; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #0c0ebf; }
+  background: #8268da; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #11df73; }
+  background: #780302; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #822cd1; }
+  background: #06f022; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #17d3d0; }
+  background: #2b8095; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #bc9f52; }
+  background: #9da9a6; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #a2013e; }
+  background: #393e9b; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #ef6387; }
+  background: #3c580d; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #c99ea0; }
+  background: #cbf997; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #611328; }
+  background: #259a56; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #23c054; }
+  background: #a214b4; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #b79f6a; }
+  background: #0e90af; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -12869,6 +12869,9 @@ table .parent-row,
 
 .col-icons div {
   padding: 0px 4px !important; }
+
+.max-small-width-modal {
+  max-width: 452px !important; }
 
 @media screen and (max-width: 767px) {
   .profile-box {
